--- a/frontend/src/templates/login.html
+++ b/frontend/src/templates/login.html
@@ -14,7 +14,7 @@
                     <input type="password" id="password" name="password" class="form-input" placeholder="Enter your password">
                 </div>
                 <button type="submit" class="w-full bg-neon-green hover:bg-neon-pink text-purple-900 font-bold py-2 px-4 rounded shadow-neon transition">
-                    Sign In
+                    Log In
                 </button>
             </form>
         </div>
