--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -7,7 +7,7 @@
             <form id="edit-form" class="space-y-4">
                 <div>
                     <label class="form-label mb-3" for="avatar">Avatar</label>
-                    <input type="file" id="avatar" name="avatar" class="hidden" accept="image/*">
+                    <input type="file" id="avatar" name="avatar" class="hidden" accept="image/jpeg,image/jpg,image/png">
                     <label for="avatar" class="flex bg-neon-pink text-white font-bold py-2 px-4 rounded cursor-pointer shadow-neon hover:bg-neon-green w-full justify-center items-center">
                         Choose File
                     </label>
