--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -2,14 +2,10 @@
   class="min-h-screen bg-gradient-to-br from-purple-900 via-blue-900 to-black py-8 font-orbitron"
 >
   <div class="max-w-md mx-auto px-4">
-    <h1
-      class="text-5xl font-bold text-center mb-8 text-neon-green drop-shadow-neon break-words"
-    >
+    <h1 class="text-5xl font-bold text-center mb-8 text-neon-green drop-shadow-neon break-words">
       Edit Profile
     </h1>
-    <div
-      class="bg-black p-6 rounded-lg shadow-neon border-2 border-neon-pink mb-10"
-    >
+    <div class="bg-black p-6 rounded-lg shadow-neon border-2 border-neon-pink mb-10">
       <form id="edit-form" class="space-y-4">
         <div>
           <label class="form-label mb-3" for="avatar">Avatar</label>
@@ -26,9 +22,7 @@
           >
             Choose File
           </label>
-          <span
-            id="file-name"
-            class="block mt-2 text-sm text-gray-400 text-center"
+          <span id="file-name" class="block mt-2 text-sm text-gray-400 text-center"
             >No file chosen</span
           >
         </div>
