Refactor chat and profile templates, enhance chat functionality

--- a/frontend/src/templates/profile.html
+++ b/frontend/src/templates/profile.html
@@ -24,7 +24,7 @@
           <div id="friends-list">
             <!-- Users list will be dynamically loaded here -->
           </div>
-          <button id="find-friends-btn" class="mt-6 btn-green">Find New Friends</button>
+          <button id="find-friends-btn" class="mt-6 btn-green">Friend Management</button>
         </div>
       </div>
     </div>
