--- a/frontend/src/templates/users.html
+++ b/frontend/src/templates/users.html
@@ -2,7 +2,7 @@
   <div class="max-w-4xl mx-auto px-4">
     <h1 class="page-title text-neon-green mt-10">Users</h1>
     <div class="flex justify-center">
-      <div class="form-card py-10 flex flex-col items-center min-w-96">
+      <div class="glass-card p-6 mb-10 py-10 flex flex-col items-center">
         <div id="user-list">
           <!-- Users list will be dynamically loaded here -->
         </div>
