refactor: clean up HTML doctype and improve formatting in multiple files

--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -12,12 +12,7 @@
             class="hidden"
             accept="image/jpeg,image/jpg,image/png"
           />
-          <label
-            for="avatar"
-            class="flex btn-pink"
-          >
-            Choose File
-          </label>
+          <label for="avatar" class="flex btn-pink"> Choose File </label>
           <span id="file-name" class="block mt-2 text-sm text-gray-400 text-center"
             >No file chosen</span
           >
@@ -30,12 +25,7 @@
           <label class="form-label" for="username">Nickname</label>
           <input type="text" id="username" name="username" class="form-input" />
         </div>
-        <button
-          type="submit"
-          class="w-full btn-green"
-        >
-          Save
-        </button>
+        <button type="submit" class="w-full btn-green">Save</button>
       </form>
     </div>
     <div class="text-center space-x-4">
